--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </header>
   <main>
     <p>2023-06-01: <a href="/webcomics/butterfly.jpg">Butterfly Effect</a></p>
+    <img src="/webcomics/butterfly.jpg" alt="Butterfly Effect" width="617" height="254">
   </main>
   <footer>
     <p>Copyright © 2023 Ishaan Koratkar</p>
