--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <h3>Send feedback of any sort to ishaan [at] koratkar [dot] com.</h3>
   </header>
   <main>
+    <p>2023-06-02: <a href="/webcomics/catcall.jpg">Catcalling</a></p>
+    <img src="/webcomics/catcall.jpg" alt="Catcalling" width="254" height="254">
     <p>2023-06-01: <a href="/webcomics/butterfly.jpg">Butterfly Effect</a></p>
     <img src="/webcomics/butterfly.jpg" alt="Butterfly Effect" width="617" height="254">
   </main>
